allow no enrollment date